Grouped-Windows-List: * fix window label allocation out of bounds in rtl layout (fix #10280) * fix window count badge position in rtl layout * allocation code refactor * moved some appGroup styling into theme * minor code cleanup

--- a/data/theme/cinnamon.css
+++ b/data/theme/cinnamon.css
@@ -1428,6 +1428,7 @@ StScrollBar StButton#vhandle:hover {
     padding-left: 4px;
 }
 .grouped-window-list-number-label {
+    font-size: 10px;
     z-index: 99;
     text-shadow: black 1px 0px 2px;
     color:#fff;
@@ -1436,10 +1437,13 @@ StScrollBar StButton#vhandle:hover {
 .grouped-window-list-badge {
     border-radius: 256px;
     background-color: #000000;
+    margin: 0;
 }
 .grouped-window-list-button-label {
-    padding-left: 4px;
+    padding-left: 6px;
+    padding-right: 6px;
 }
+
 .grouped-window-list-thumbnail-alert {
     background: rgba(255,52,52,0.3);
 }
